Enum "bookingStatus" {
  "confirmed"
  "canceled"
  "pending"
}

Enum "method" {
  "credit card"
  "debit card"
  "net banking"
}

Enum "paymentStatus" {
  "successful"
  "failed"
  "pending"
}

Enum "role" {
  "admin"
  "customer"
  "agent"
}

Enum "type" {
  "one-way"
  "round-trip"
  "multi-city"
}

Table "agents" {
  "id" int4 [pk, not null, increment]
  "user_id" int4 [not null, increment]
  "phone_number" text [not null]
  "region" text [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Table "bookings" {
  "id" int4 [pk, not null, increment]
  "customer_id" int4 [not null, increment]
  "trip_id" int4 [not null, increment]
  "booking_date" timestamp [not null]
  "status" bookingStatus [not null, default: 'pending']
  "travelers" int4 [not null]
  "total_price" text [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Table "customers" {
  "id" int4 [pk, not null, increment]
  "user_id" int4 [not null, increment]
  "phone" text [unique, not null]
  "street_address1" text [not null]
  "city" text [not null]
  "zip" text [not null]
  "dob" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
  "street_address2" text
}

Table "itineraries" {
  "id" int4 [pk, not null, increment]
  "trip_id" int4 [not null, increment]
  "day" int4 [not null]
  "activity" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Table "payments" {
  "id" int4 [pk, not null, increment]
  "booking_id" int4 [not null, increment]
  "date" timestamp [not null]
  "amount" text [not null]
  "status" paymentStatus [not null, default: 'pending']
  "method" method [not null, default: 'debit card']
  "created_at" timestamp [not null, default: `now()`]
}

Table "reviews" {
  "id" int4 [pk, not null, increment]
  "customer_id" int4 [not null, increment]
  "trip_id" int4 [not null, increment]
  "rating" int4 [not null]
  "comment" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Table "trips" {
  "id" int4 [pk, not null, increment]
  "agent_id" int4 [not null, increment]
  "destination" text [not null]
  "origin" text [not null]
  "departure_date" timestamp [not null]
  "return_date" timestamp [not null]
  "price" text [not null]
  "available_seats" int4 [not null]
  "type" type [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Table "users" {
  "id" int4 [pk, not null, increment]
  "first_name" text [not null]
  "last_name" text [not null]
  "username" text [unique, not null]
  "email" text [unique, not null]
  "password" text [not null]
  "image" text [default: 'https://api.dicebear.com/9.x/bottts/svg']
  "role" role [not null, default: 'customer']
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]
}

Ref "agents_user_id_users_id_fk":"users"."id" < "agents"."user_id"

Ref "bookings_customer_id_customers_id_fk":"customers"."id" < "bookings"."customer_id"

Ref "bookings_trip_id_trips_id_fk":"trips"."id" < "bookings"."trip_id"

Ref "customers_user_id_users_id_fk":"users"."id" < "customers"."user_id"

Ref "itineraries_trip_id_trips_id_fk":"trips"."id" < "itineraries"."trip_id"

Ref "payments_booking_id_bookings_id_fk":"bookings"."id" < "payments"."booking_id"

Ref "reviews_customer_id_customers_id_fk":"customers"."id" < "reviews"."customer_id"

Ref "reviews_trip_id_trips_id_fk":"trips"."id" < "reviews"."trip_id"

Ref "trips_agent_id_agents_id_fk":"agents"."id" < "trips"."agent_id"
